Make sure users are saved with kvargcount as integer

--- a/views/app/tracker.html
+++ b/views/app/tracker.html
@@ -27,5 +27,5 @@
   </div>
     <div class="loner">
       <p class="huge"> Total KVARG in storage: {_page.totalKvarg} </p>
-      <p> Total PROTEIN in storage: {multiply(_page.totalKvarg, 60)} </p>
+      <p> Total PROTEIN in storage: {multiply(_page.totalKvarg, 60)}g </p>
     </div>
