--- a/views/app/tracker.html
+++ b/views/app/tracker.html
@@ -1,31 +1,27 @@
 <Body:>
-  <div class="row">
-    <div class="span8 offset1">
-      <table class="table">
-        <thead>
-            <tr>
-                <th>User</th>
-                <th>KVARG Count </th>
-            </tr>
-        </thead>
-        <tbody>
-          {#each _page.users as :user}
-            <tr>
-              <td class="{#if belowLimit(:user)}red{/}">{{:user.name}} </td>
-              <td class="{#if belowLimit(:user)}red{/}">{:user.kvargCount}</td>
-              <td> 
-                <div class="independant">
-                    <button type="submit" class="btn btn-default btn-xs" x-bind="click: user.inc"> + </button> 
-                    <button type="submit" class="btn btn-default btn-lg" x-bind="click: user.dec"> - </button>
-                </div>
-              </td>
-            </tr>
-          {/}
-        </tbody>
-      </table>
-    </div>  
-  </div>
-    <div class="loner">
-      <p class="huge"> Total KVARG in storage: {_page.totalKvarg} </p>
-      <p> Total PROTEIN in storage: {multiply(_page.totalKvarg, 60)}g </p>
-    </div>
+  <table>
+    <thead>
+        <tr>
+            <th>User</th>
+            <th>KVARG Count</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+      {#each _page.users as :user}
+        <tr>
+          <td class="{#if belowLimit(:user)}red{/}">{{:user.name}} </td>
+          <td class="{#if belowLimit(:user)}red{/}">{:user.kvargCount}</td>
+          <td class="right"> 
+            <a type="submit" x-bind="click: user.inc" class="btn"> + </a> 
+            <a type="submit" x-bind="click: user.dec" class="btn red"> - </a>
+          </td>
+        </tr>
+      {/}
+    </tbody>
+  </table>
+
+<div class="loner">
+  <p class="huge"> Total KVARG in storage: {_page.totalKvarg} </p>
+  <p> Total PROTEIN in storage: {multiply(_page.totalKvarg, 60)}g </p>
+</div>
