Finish up styling

--- a/views/app/index.html
+++ b/views/app/index.html
@@ -2,7 +2,9 @@
 <import: src="./users">
 
 <Header:>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
+  <link href='/' rel='stylesheet' type='text/css'>
   <body class="{{dash($ns)}}">
   <header>
     <div class="container">
@@ -15,10 +17,8 @@
       </ul>
     </div>
   </header>
-  <div class="container">
     
 <Footer:>
-  </div>
   <footer>
     <div class="container">
       <p>&copy; Jesper Persson</p>
