--- a/styles/app/index.styl
+++ b/styles/app/index.styl
@@ -1,3 +1,4 @@
+@import '../vendor/normalize.css'
 @import 'nib/vendor'
 @import './tracker'
 
@@ -5,6 +6,10 @@
 
 blue = #689EE5
 red = #FF362F
+gray = #5B5C60
+
+*
+  box-sizing border-box
 
 html, body
   margin 0
@@ -15,7 +20,7 @@ header
   margin-bottom 2em
   padding 0 1em
   background #222
-  color white
+  color gray
 
   .logo
     display inline-block
@@ -28,12 +33,12 @@ header
     text-decoration none
 
 a
-  color red
+  color gray
 
 .btn
   display inline-block
   margin-left 0.3em
-  width 1.5em
+  padding 0.2em 0.4em
   background blue
   color white
   text-align center
@@ -41,12 +46,32 @@ a
   border-radius 0.3em
   text-decoration none
 
+  &.square
+    font-family monospace
+    padding 0 0.42em
+
   &.red
     background red
     border 1px solid darken(red, 20%)
+    text-color gray    
 
 .active a
-  color blue
+  color white
+
+form
+  margin-bottom 2em
+  
+  &.inline-form
+    label, input
+      display block
+    input
+      margin-bottom 1em
+      width 100%
+    input[type="submit"]
+      margin 0
+      display inline-block
+      width auto
+
 
 table
   width 100%
@@ -63,6 +88,11 @@ table
     &.right
       text-align right
 
+  .btn
+    font-size 0.8em
+    &.square
+      font-size 1.2em  
+
 .huge
   font-size 2em
   margin-bottom 0
@@ -71,18 +101,38 @@ table
   position relative
   margin 0 auto
   max-width 30em
+  
+.user .container
+  max-width 50em
+
+.sidebar
+  width 25%
+  margin-right 5%
+
+.content
+  width 70%
+
+.sidebar, .content
+  float left
+  @media (max-width: 40em)
+    float none
+    width 100%
+
+.clearfix:after
+  content: " "; /* Older browser do not support empty content */
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
+
 
 footer
-  position absolute
-  bottom 0
-  width 100%
   margin-top 3em
 
 @media (max-width: 30em)
-  html
-    color red
-
-  .huge
-    font-size 0.5em
+  body
+    font-size 0.9em
+  .main
+    padding 0 1em
   
 
