--- a/views/app/users.html
+++ b/views/app/users.html
@@ -1,34 +1,39 @@
 <Body:>
-<div class="row">
-  <form class="span3" x-bind="submit: user.add">
-    <h3>Add user</h3>
-    <fieldset>
-      <label>Name</label>
-      <input type="text" value={_page.newUser.name}>
-      <label>Initial KVARG</label>
-      <input type="number" value={_page.newUser.kvargCount}>
-      <div>
-        <button type="submit" class="btn">Add</button>
-      </div>
-    </fieldset>
-  </form>
-  <div class="span8 offset1">
-    <table class="table">
-      <thead>
+<div class="user">
+  <div class="container main clearfix">
+
+    <aside class="sidebar">
+      <h3>Add user</h3>
+      <form x-bind="submit: user.add" class="inline-form">
+        <label>Name</label>
+        <input type="text" value={_page.newUser.name}>
+        <label>Initial KVARG</label>
+        <input type="number" value={_page.newUser.kvargCount}>
+        <input type="submit" class="btn big" value="Add">
+      </form>
+    </aside>
+
+    <section class="content">
+      <h3>All Users</h3>
+      <table>
+        <thead>
           <tr>
-              <th>User</th>
+            <th>User</th>
+            <th></th>
           </tr>
-      </thead>
-      <tbody>
-        {#each _page.users as :user}
-          <tr>
-            <td>{{:user.name}} </td>
-            <td> 
-              <button type="submit" class="btn btn-default btn-xs" x-bind="click: user.remove"> Remove user </button>
-            </td>
-          </tr>
-        {/}
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          {#each _page.users as :user}
+            <tr>
+              <td>{{:user.name}} </td>
+              <td class="right"> 
+                <a class="btn big red" x-bind="click: user.remove"> Remove user </a>
+              </td>
+            </tr>
+          {/}
+        </tbody>
+      </table>
+    </section>
+
   </div>
 </div>
